CB-26926: Fix EC2 launch template instance type not getting updated during vertical scale, if the group is empty
Previously, if there were no nodes in the group when it was getting vertical scaled, during the launch template update, the instance type wouldn't be updated because with no instances, we retrieve the instance type from the `skeleton` object on `CloudInstance`, by calling `Group::getReferenceInstanceTemplate`, but the skeleton object's template wasn't updated to the new instance type in `StackToCloudStackConverter::updateWithVerticalScaleRequest`.