@@ -258,16 +258,43 @@ public class StackToCloudStackConverterTest {
 
         CloudStack result = underTest.updateWithVerticalScaleRequest(cloudStack, freeIPAVerticalScaleRequest);
         String resultFlavor = result.getGroups()
-                .iterator()
-                .next()
+                .getFirst()
                 .getInstances()
-                .iterator()
-                .next()
+                .getFirst()
                 .getTemplate()
                 .getFlavor();
 
         assertEquals("ec2big", resultFlavor);
-        assertEquals(100, result.getGroups().get(0).getRootVolumeSize());
+        assertEquals(100, result.getGroups().getFirst().getRootVolumeSize());
+    }
+
+    @Test
+    void testUpdateWithVerticalScaleRequestWithZeroInstanceGroup() {
+        InstanceTemplate skeletonTemplate = new InstanceTemplate("small", null, 0L, Set.of(), null, null, 0L, null, null, 0L);
+        CloudInstance skeleton = new CloudInstance("skeleton", skeletonTemplate, null, null, null);
+        Group group1 = new Group("group1", null, Set.of(), null, skeleton, null, null, null, 100, null, null, Map.of());
+        Group group2 = new Group("group2", null, Set.of(), null, null, null, null, null, 100, null, null, Map.of());
+        CloudStack cloudStack = new CloudStack(Set.of(group1, group2), null, null, Map.of(), Map.of(), null, null, null,
+                null, null, null, null, null, false, null);
+        VerticalScaleRequest verticalScaleRequest = getVerticalScaleRequest();
+
+        CloudStack result = underTest.updateWithVerticalScaleRequest(cloudStack, verticalScaleRequest);
+
+        assertEquals("very_large", skeletonTemplate.getFlavor());
+        assertEquals(200, group1.getRootVolumeSize());
+        assertEquals(100, group2.getRootVolumeSize());
+    }
+
+    private static VerticalScaleRequest getVerticalScaleRequest() {
+        VerticalScaleRequest verticalScaleRequest = new VerticalScaleRequest();
+        verticalScaleRequest.setGroup("group1");
+        InstanceTemplateRequest instanceTemplateRequest = new InstanceTemplateRequest();
+        instanceTemplateRequest.setInstanceType("very_large");
+        VolumeRequest rootVolumeRequest = new VolumeRequest();
+        rootVolumeRequest.setSize(200);
+        instanceTemplateRequest.setRootVolume(rootVolumeRequest);
+        verticalScaleRequest.setTemplate(instanceTemplateRequest);
+        return verticalScaleRequest;
     }
 
     @Test
